--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <body>
 
+<!--This is really great way of resolving code issues-->
 <h1>My First Google Map</h1>
 
 <div id="map" style="width:400px;height:400px;background:yellow"></div>
