--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ var map = new google.maps.Map(document.getElementById("map"), mapOptions);
 To use this code on your website, get a free API key from Google.
 Read more at: https://www.w3schools.com/graphics/google_maps_basic.asp
 -->
-
+<!--more comment-->
 </body>
 </html>
